//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/greet.proto
syntax="proto3";

package greet;

option go_package="github.com/emiliano080591/grpcv2/greet/proto";

message GreetRequest{
  string first_name=1;
}

message GreetResponse{
  string result=1;
}

service GreetService{
  rpc Greet (GreetRequest) returns (GreetResponse);
}